fixed overflow issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,6 @@
 @tailwind components;
 @tailwind utilities;
 * {
-    overflow-x: hidden;
     box-sizing: border-box;
     padding: 0;
     margin: 0;
